@@ -1,6 +1,7 @@
 This file documents the revision history for the SNClient+ agent.
 
 next:
+         - add support for perf-syntax
          - check_wmi: add performance data
          - check_wmi: add support for empty-syntax
          - update check_nsc_web to v0.6.3
